# gamspreprocessor

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  FRAGEN.md  Makefile  README.md  USAGE.md  pyproject.toml
.github/workflows/: docs.yml
docs/de/: mkdocs.yml  zensical.toml
docs/de/docs/: configuration.md  index.md  installation.md  preprocess.md  project.toml.md
docs/de/docs/api/: gams3.md  index.md  objectcsv.md  project.md  projectsplitter.md  transformers.md
docs/de/docs/command-reference/: gamspreprocessor.md  installation.md  object.csv.md  object_dirs.md  project.toml.md
docs/de/docs/command-reference/files/: gamsproject.toml.md  project.toml.md
docs/de/docs/command-reference/gamspreprocessor/: project.md
docs/de/docs/command-reference/subcommands/: csv.md  multitransform.md  project.md  splitproject.md  validate.md
docs/de/docs/commands/: csv.md  multitransform.md  project.md  splitproject.md  transform.md
docs/de/docs/how-to/: index.md
docs/de/docs/reference/: datastreams.csv.md  dublin_core.md  object.csv.md  object_dirs.md  preprocess.md
docs/de/docs/reference/files/: datastreams.csv.md  gamsproject.toml.md
docs/de/docs/reference/gamspreprocessor/: splitproject.md
docs/de/docs/reference/preprocess/: csv.md  multitransform.md  splitproject.md
docs/de/docs/reference/subcommands/: gams3export.md  splitproject.md  transform.md  validate.md
docs/de/docs/tutorial/: csv.md  splitproject.md  transform.md
docs/de/docs/tutorials/: gams3export.md  index.md  multitransform.md  objdir_from_scratch.md  objdir_new.md  object_dirs_intro.md  objectdir_gams3.md  objectdir_splitproject.md  project.md  workflows.md
docs/en/: zensical.toml
docs/en/docs/: index.md
src/gamspreprocessor/: __init__.py  formatguesser.py  objectcsv.py  project.py  utils.py
src/gamspreprocessor/cli/: __init__.py  gams3export.py  main.py  multitransform.py  objectcsv.py  project.py  projectsplitter.py  transform.py  validate.py
src/gamspreprocessor/gams3/: __init__.py  apiquery.py  datastream.py  foxml.py  object.py
src/gamspreprocessor/objectsource/: __init__.py  genericobjectsource.py  lidoobjectsource.py  teiobjectsource.py
src/gamspreprocessor/projectsplitter/: Xfilereference.py  __init__.py  abstractfilereference.py  abstractfilereferences.py  abstractobjectsources.py  bookkeeper.py  formatguesser.py  genericobjectsource.py  lidoobjectdir.py  lidoobjectsource.py  make_folders.py  objectdir.py  objectsource.py  splitter.py  teiobjectdir.py  teiobjectsource.py
src/gamspreprocessor/transformers/: __init__.py  exceptions.py  xslt.py
tests/: test_formatguesse.py  test_objectcsv_api.py  test_project_api.py  test_projectsplitter_api.py  test_utils.py
tests/cli/: test_gams3export.py  test_main.py  test_multitransform.py  test_objectcsv.py  test_project.py  test_projectsplitter.py  test_transform.py  test_validate.py
tests/cli/test_objectcsv/objects/: project.toml
tests/cli/test_objectcsv/objects/obj1/: DC.xml
tests/cli/test_objectcsv/xlsx/: all_objects.xlsx
tests/gams3/: conftest.py  test_api_query.py  test_datastream.py  test_foxml.py  test_gams3__init__.py  test_object.py
tests/gams3/data/: datastreams.xml  foxml.xml  query_response.xml  query_response_page2.xml  query_response_page3.xml  tei_source.xml
tests/projectsplitter/: test___init__.py  test_abstractfilereferences.py  test_bookkeeper.py  test_formatguess.py  test_genericobjectsource.py  test_lidoobjectdir.py  test_lidoobjectsource.py  test_lidoobjectsource_linkresource_ref.py  test_objectdir.py  test_objectsource.py  test_splitter.py  test_teiobjectdir.py  test_teiobjectsource.py  test_teiobjectsource_graphic_ref.py
tests/projectsplitter/data/projects/: foo.txt
tests/projectsplitter/test_formatguess/: foo.csv
tests/test_objectsource/: test_abstractfilereferences.py  test_genericobjectsource.py  test_lidoobjectsource.py  test_lidoobjectsource_linkresource_ref.py  test_teiobjectsource.py  test_teiobjectsource_graphic_ref.py
tests/test_objectsource/data/projects/: LIDO_1.xml
tests/transformers/: test_xslt.py
tests/transformers/test_xslt/: tei2dc.xsl
