[project]
name = "gamspreprocessor"
version = "0.2.2"
description = "A utility which helps to preprocess GAMS objects before ingestion."
authors = [
    { name = "Gunter Vasold", email = "gunter.vasold@uni-graz.at" }
]
dependencies = [
    "click>=8.1.7",
    "uritools>=4.0.3",
    "saxonche>=12.5.0",
    "gamslib>=0.5.0",
    "frozendict>=2.4.6",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
preprocess = "gamspreprocessor.cli.main:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]

dev = [
    "pytest>=8.3.2",
    "pylint>=3.2.6",
    "pytest-datadir>=1.5.0",
    "grip>=4.6.2",
    "pyright>=1.1.390",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gamspreprocessor"]

[tool.pylint.main]

# A comma-separated list of package or module names from where C extensions may
# be loaded. Extensions are loading into the active Python interpreter and may
# run arbitrary code.
extension-pkg-allow-list = ["saxonche"]

[tool.ruff.lint]
select = ["PL", "RUF", "SIM"]

