[project]
name = "gamspreprocessor"
version = "0.5.1"
description = "A utility which helps to preprocess GAMS objects before ingestion."
authors = [
    { name = "Gunter Vasold", email = "gunter.vasold@uni-graz.at" }
]
readme = "README.md"
requires-python = ">= 3.11"
keywords = ["GAMS"]

dependencies = [
    "click>=8.4.2",
    "uritools>=6.1.2",
    "saxonche>=13.0.0",
    "frozendict>=2.4.7",
    "gamslib>=0.8.6",
]


classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
gamspreprocessor = "gamspreprocessor.cli.main:cli"
preprocess = "gamspreprocessor.cli.main:cli"

[project.urls]
Homepage = "https://github.com/DHGraz/gamspreprocessor"
Documentation = "https://dhgraz.github.io/gamspreprocessor/"
Issues = "https://github.com/DHGraz/gamspreprocessor/issues"
Changelog = "https://github.com/DHGraz/gamspreprocessor/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]

dev = [
    "pytest>=9.1.1",
    "pylint>=4.0.6",
    "pytest-datadir>=1.8.0",
    "pyright>=1.1.411",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "zensical>=0.0.50",
    "mkdocstrings-python>=2.0.5",
]


[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.build]
exclude = [
    ".uv-cache/**",
    ".venv/**",
    "build/**",
    "dist/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gamspreprocessor"]

[tool.pylint.main]

# A comma-separated list of package or module names from where C extensions may
# be loaded. Extensions are loading into the active Python interpreter and may
# run arbitrary code.
extension-pkg-allow-list = ["saxonche"]

[tool.ruff.lint]
select = ["PL", "RUF", "SIM"]


